randomquotes-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: randomquotes
  namespace: fdaluisio-dev
  labels:
    app: randomquotes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: randomquotes
  template:
    metadata:
      labels:
        app: randomquotes
        deployment: randomquotes
    spec:
      containers:
        - name: randomquotes
          image: docker.io/fdaluisio/randomquotes:0.1.9
          ports:
            - containerPort: 8080
              protocol: TCP
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
